--- a/invite/templates/invite/info_user.html
+++ b/invite/templates/invite/info_user.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <div>{{ info_user.name.upper }} {{ info_user.last_name }}</div>
+    <div>{{ info_user_view.name.upper }} {{ info_user_view.last_name }}</div>
     <br>
-    <div>Your <b>ID</b> - {{ info_user.id }}</div>
+    <div>Your <b>ID</b> - {{ info_user_view.id }}</div>
     <br>
     <div><b>PATH</b> - {{ request.path }}</div>
     <br>
